# pyresonitelink

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.claude/: settings.local.json
examples/: get_root_slot.py  tree.py
src/pyresonitelink/: __init__.py  client.py
src/pyresonitelink/cli/: __init__.py  dumptree.py  gencomponent.py  tree.py
src/pyresonitelink/codegen/: __init__.py  generator.py  schema_parser.py  type_mapper.py
src/pyresonitelink/components/: __init__.py  base.py
src/pyresonitelink/components/valuefields/: components.py
src/pyresonitelink/data/: __init__.py  codec.py  fields.py  members.py  messages.py  primitives.py  responses.py  utils.py  workers.py
tests/: conftest.py  test_codec.py  test_members.py  test_values.py
