[project]
name = "pyresonitelink"
version = "0.1.0"
description = "Python bindings for ResoniteLink"
readme = "README.md"
authors = [
    { name = "Robert Baruch", email = "robert.c.baruch@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=7.1.0",
    "websockets>=15.0.1",
]

[project.scripts]
resonite-tree = "pyresonitelink.cli.tree:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
]
