[project]
name = "pyresonitelink"
version = "0.2.0"
description = "Python bindings for ResoniteLink"
readme = "README.md"
authors = [
    { name = "Robert Baruch", email = "robert.c.baruch@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "textual>=7.1.0",
    "websockets>=16.0.0",
]

[project.scripts]
resonite-tree = "pyresonitelink.cli.tree:main"
resonite-dumptree = "pyresonitelink.cli.dumptree:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
